--- a/dockercustom/env.sample
+++ b/dockercustom/env.sample
@@ -24,21 +24,6 @@ TZ=Asia/Shanghai
 CONTAINER_PACKAGE_URL=mirrors.aliyun.com
 
 #
-# Nginx
-#
-NGINX_VERSION=1.15.7-alpine
-NGINX_HTTP_HOST_PORT=80
-NGINX_HTTPS_HOST_PORT=443
-NGINX_CONFD_DIR=./services/nginx/conf.d
-NGINX_CONF_FILE=./services/nginx/nginx.conf
-NGINX_FASTCGI_PHP_CONF=./services/nginx/fastcgi-php.conf
-NGINX_FASTCGI_PARAMS=./services/nginx/fastcgi_params
-NGINX_SSL_CERTIFICATE_DIR=./services/nginx/ssl
-NGINX_LOG_DIR=./logs/nginx
-# Available apps: certbot
-NGINX_INSTALL_APPS=
-
-#
 # Openresty
 #
 OPENRESTY_VERSION=alpine
@@ -73,25 +58,18 @@ PHP_VERSION=7.2.19
 PHP_PHP_CONF_FILE=./services/php/php.ini
 PHP_FPM_CONF_FILE=./services/php/php-fpm.conf
 PHP_LOG_DIR=./logs/php
-PHP_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache
+XHPROF_LOG_DIR=./logs/xhprof
+PHP_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,igbinary,redis,bz2,soap,imagick,mcrypt,imap,xmlrpc,opcache,bcmath,sockets,memcached,xdebug,swoole,pdo_sqlsrv,sodium,yaf,amqp,mongodb,event,rar,ast,yac,yaconf,msgpack,seaslog,varnish,xhprof
 
-#
-# PHP5.6
-#
-PHP56_VERSION=5.6.40
-PHP56_PHP_CONF_FILE=./services/php/php.ini
-PHP56_FPM_CONF_FILE=./services/php/php-fpm.conf
-PHP56_LOG_DIR=./logs/php
-PHP56_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache
 
-#
-# PHP5.4
-#
-PHP54_VERSION=5.4.45
-PHP54_PHP_CONF_FILE=./services/php54/php.ini
-PHP54_FPM_CONF_FILE=./services/php54/php-fpm.conf
-PHP54_LOG_DIR=./logs/php
-PHP54_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,opcache
+PHPCLI_VERSION=7.2.19-cli-alpine3.10
+PHPCLI_PHP_CONF_FILE=./services/phpcli/php.ini
+PHPCLI_FPM_CONF_FILE=./services/phpcli/php-fpm.conf
+PHPCLI_LOG_DIR=./logs/php
+PHPCLIXHPROF_LOG_DIR=./logs/xhprof
+PHPCLI_EXTENSIONS=pdo_mysql,mysqli,mbstring,gd,curl,redis,bz2,soap,imagick,mcrypt,imap,xmlrpc,opcache,bcmath,sockets,memcached,xdebug,swoole,pdo_sqlsrv,sodium,yaf,amqp,mongodb,event,rar,ast,yac,yaconf,msgpack,igbinary,seaslog,varnish,xhprof
+
+
 
 #
 # RABBITMQ
@@ -156,26 +134,21 @@ MYSQL_HOST_PORT=3306
 MYSQL_ROOT_PASSWORD=123456
 MYSQL_CONF_FILE=./services/mysql/mysql.cnf
 
-#
-# MySQL5
-#
-MYSQL5_VERSION=5.7.28
-MYSQL5_HOST_PORT=3305
-MYSQL5_ROOT_PASSWORD=123456
-MYSQL5_CONF_FILE=./services/mysql5/mysql.cnf
+
 
 #
 # Redis
 #
 REDIS_VERSION=5.0.3-alpine
-REDIS_HOST_PORT=6379
+REDIS_HOST_PORT=6380
+REDIS_PASSWORD=123456
 REDIS_CONF_FILE=./services/redis/redis.conf
 
 #
 # Memcached
 #
 MEMCACHED_VERSION=alpine
-MEMCACHED_HOST_PORT=11211
+MEMCACHED_HOST_PORT=11212
 MEMCACHED_CACHE_SIZE=128
 
 #
