--- a/web/package.json
+++ b/web/package.json
@@ -8,18 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.4",
-    "animate.css": "^4.1.1",
-    "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
-    "echarts": "^5.3.1",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.6.0",
-    "lodash": "^4.17.21",
     "register-service-worker": "^1.7.2",
-    "sortablejs": "^1.15.0",
     "vue": "^3.2.13",
+    "vuex": "^4.0.0",
     "vue-i18n": "^9.1.9",
     "vue-loader": "^17.0.0",
     "vue-router": "^4.0.3"
@@ -31,6 +23,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-pwa": "^5.0.4",
     "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
